--- a/index.html
+++ b/index.html
@@ -1,4 +1,5 @@
 <!doctype html>
+<html>
 <head>
   <meta charset="utf-8">
   <title>changed title</title>
@@ -14,4 +15,4 @@
   
   
     <body/>
-  
+  <html/>
